--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
